[package]
name = "comx-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ed25519-dalek = "2.0"
bip39 = "2.0"
blake2b_simd = "1.0"
bs58 = "0.5"
hex = "0.4"
base58 = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }