[package]
name = "comx-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
bip39 = "2.0"
blake2b_simd = "1.0"
bs58 = "0.5"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }