[package]
name = "comx-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
schnorrkel = "0.11.4"
bip39 = "2.0"
blake2b_simd = "1.0"
bs58 = "0.5"
rand = "0.8"
hex = "0.4"
sp-core = "34.0.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
num-bigint = "0.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
wiremock = "0.5"

[dev-dependencies]
mockito = "1.2"
tokio = { version = "1.0", features = ["full", "test-util"] }
serial_test = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "client_benchmarks"
harness = false